Final group page edits.

--- a/app/views/groups/dashboard.html.haml
+++ b/app/views/groups/dashboard.html.haml
@@ -2,15 +2,16 @@
   %img{ style:"display:inline; height:115px;", src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
   %span{ style: "font-size: 50px;position: relative;top:13px;" } Group Dashboard
   = link_to "Edit Group", edit_group_path(@group), class: "button button-info button-small", style: "float: right; margin: 80px 20px 0 0;"
+  = link_to "View Group", group_path(@group), class: "button button-actionable button-small", style: "float: right; margin: 80px 20px 0 0;"
   %div.notificationpanelbody
     %table.table.overview
       %tr
         %td
           %h3= when_count(@stats[:users])
-          %p Total Users
+          %p Total Members
         %td
           %h3= when_count(@stats[:visits])
-          %p Total Users
+          %p New Members
         %td
           %h3= when_count(@stats[:arena_answers])
           %p Arena Answers
@@ -21,10 +22,10 @@
       %a.btn.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
         = @path.nil? ? "Filter by Challenge" : "Filtering by #{@path.name}"
         %span.caret
-      %ul.dropdown-menu
+      %ul.dropdown-menu{ style: "max-height: 300px; overflow: auto;" }
         %li= link_to "All Challenges", dashboard_group_path(@group.id)
         %li.divider
-        - Path.all.each do |path|
+        - Persona.first.paths.all.each do |path|
           %li= link_to path.name, dashboard_group_path(@group.id, p:path.id)
     = will_paginate @users, style: "float:left; margin-bottom:0; margin-top: 0;"
     = render "companies/search", link: dashboard_group_path(@group.id), placeholder: "Name or email..."
@@ -42,8 +43,12 @@
           %tr
             %td= link_to truncate(u.name, length: 20), profile_path(u.username)
             %td= truncate(u.email, length:25)
-            %td= u.created_at.strftime("%m/%d/%Y")              
-            %td= @path.completed_tasks.where("completed_tasks.user_id = ?", u.id).count
-            %td= u.enrolled?(@path).total_points
+            %td= u.created_at.strftime("%m/%d/%Y")  
+            - if @path
+              %td= @path.completed_tasks.where("completed_tasks.user_id = ?", u.id).count
+              %td= u.enrolled?(@path).total_points
+            - else            
+              %td= u.completed_tasks.where("completed_tasks.user_id = ?", u.id).count
+              %td= u.earned_points
             %td= u.enrollments.size
             
