--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,7 +1,8 @@
 %div{ style: "background-color: white; border-radius: 4px; padding:8px; width: 923px;" }
   %img{ style:"display:inline; height:115px;", src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
   %span{ style: "font-size: 50px;position: relative;top:13px;" } Edit Group
-  = link_to "Go to Dashboard", dashboard_group_path(@group), class: "button button-info button-small", style: "float: right; margin-top: 78px;"
+  = link_to "Go to Dashboard", dashboard_group_path(@group), class: "button button-info button-small", style: "float: right; margin: 78px 0 0 20px;"
+  = link_to "View Group", group_path(@group), class: "button button-actionable button-small", style: "float: right; margin: 78px 0 0 0;"
   %hr{style:"margin:0;"}
   = form_for(@group, html: { class: "form-horizontal", style: "margin-top: 20px;" }) do |f|
     = render 'shared/error_messages', object: f.object
