--- a/app/views/paths/leaderboard.html.haml
+++ b/app/views/paths/leaderboard.html.haml
@@ -3,6 +3,8 @@
     :css
       p { margin: 0; }
   %body
-    %p rank, total_points, total_tasks, average_score, average_correct
+    %p [total_tasks, total_correct, total_incorrect, average_score, total_crs, total_votes, total_drafts]
+    %p= @overall_statistics
+    %p [e.rank, e.total_points, total_tasks, total_correct, total_incorrect, average_points, total_crs, total_votes, total_drafts]
     - @statistics.each do |s|
       %p= s
