--- a/app/views/pages/employer.html.haml
+++ b/app/views/pages/employer.html.haml
@@ -1,6 +1,6 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 950px; background: rgba(80, 114, 150, 0.8); }
+  .aboutcontainer{ width: 950px; background: rgba(36, 72, 109, 0.8); }
 
 #employer.aboutcontainer
   .aboutbox
@@ -14,7 +14,7 @@
         %p{ style: "display: none;"}
           Tell us what skills your company needs and we'll connect you with MetaBright users who fit the bill. You'll be able to see just how talented each person is, along with examples of their work. Recruiting has never been easier. 
         %p Discover job seeking MetaBright users who have the <strong>proven skills</strong> your company needs.
-        %a.button.button-actionable Learn More
+        = link_to "Learn More", "/employer1", class: "button button-actionable"
       .divider
       %div{ style: "float: right; "}
         %h2
@@ -22,6 +22,6 @@
         %p{ style: "display: none;"}
           Never waste your time in an interview again. MetaBright measures and verfies the skills of your job candidates <strong>before</strong> you interview them. Just give your candidates a unique MetaBright URL, and we take care of the rest.
         %p MetaBright measures and verfies the skills of your job candidates <strong>before</strong> you interview them.
-        %a.button.button-actionable Learn More
+        = link_to "Learn More", "/employer2", class: "button button-actionable"
           
     
