--- a/app/views/mailer/content_sub_alert.html.haml
+++ b/app/views/mailer/content_sub_alert.html.haml
@@ -16,7 +16,7 @@
         %table{ cellpadding: "0", cellspacing: "0", style: "margin-top: 5px; "}
           %tbody
             %tr
-              - if @followed_user.follows?(@follower_user)
+              - if @followed_user.following?(@follower_user)
                 %td{ style: "1px solid rgb(40, 61, 114)"}
                   %table{ cellpadding: "0", cellspacing: "0"}
                     %tbody
