--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -42,8 +42,8 @@
             .control-group
               %label.control-label Template (optional)
               .controls{ style: "margin-top: 6px;" }
-                %a.show_template{ onclick: "$(this).hide(); $(this).siblings('#task_template').show();" } Add template for question
-                = text_area_tag "task[template]", task.template, class: "big_text_area", style: (task.quoted_text.blank? ? "display: none;" : "")
+                %a.show_template{ onclick: "$(this).hide(); $(this).siblings('#task_template').show();", style: (task.template.blank? ? "" :  "display: none;") } Add template for question
+                = text_area_tag "task[template]", task.template, class: "big_text_area", style: (task.template.blank? ? "display: none;" : "")
         
         - if task.new_record? or task.creative? or task.exact?
           .creative.exact.hide
