--- a/app/views/pages/employers1.html.haml
+++ b/app/views/pages/employers1.html.haml
@@ -30,7 +30,7 @@
           %li MetaBright instantly delivers anonymized results of matching candidates.
           %li Browse scores and work samples of each.
           %li Select which people you want to contact.
-          %li Enjoy interviewing candidates your pre-screened candidates.
+          %li Enjoy interviewing your pre-screened candidates.
         %h3 
           Pricing
         %ul.pricing_table
