--- a/app/views/pages/talentminer.html.haml
+++ b/app/views/pages/talentminer.html.haml
@@ -12,33 +12,38 @@
     .body
       %div
         %h2
-          Optimize your interviews
+          Find Better Candidates
         %p
-          Never waste your time in an interview again. MetaBright measures and verfies the skills of your job candidates <strong>before</strong> you interview them. Just give your candidates a unique MetaBright URL, and we take care of the rest. 
+          MetaBright's <strong>Talent Miner</strong> makes it easy to quickly source high-quality candidates that other recruiting methods miss. Tell us what skills your company needs and we'll connect you with MetaBright users who fit the bill. Recruiting has never been easier. 
         %h3
           Our philosophy
         %p
           When evaluating a potential new-hire, we believe the most important thing is whether that person has the skills necessary to do the job. Things like where they went to school or where they previously worked are just distractions from what really matters: Can they perform?
+        %h3
+          How we're different
+        %p
+          Thousands of people use MetaBright to prove their skills. Since we evaluate everyone from Ivy-league grads to self-taught hackers on the same metric, you'll be able to discover the "diamonds in the rough" of the labor market.
         %h3 
           How it works
         %ol
-          %li Identify the skills where you want your candidates evaluated.
-          %li Include your unique MetaBright URL with your job posting. 
-          %li MetaBright evaluates the skills of each candidate, and you decide who to interview.
+          %li Identify the skills you need in your next hire.
+          %li MetaBright instantly delivers anonymized results of matching candidates.
+          %li Browse scores and work samples of each.
+          %li Select which people you want to contact.
+          %li Enjoy interviewing your pre-screened candidates.
         %h3 
-          Pricing
+          Talent Miner Pricing
         %ul.pricing_table
           %li.price_block
             %h3 Basic
             .price
               .price_figure
                 %span.price_number $10
-                %span.price_tenure
+                %span.price_tenure per month, per user
             %ul.features
-              %li 10 skill assessments
-              %li Default Challenges
-              %li Full admin panel
-              %li Standard URL
+              %li Contact 5 Users
+              %li Limited admin panel
+              %li Filter by 1 Challenge
               %li 24/7 Email support
             .price_footer
               %a.action_button{:href => "#"} Select
@@ -46,13 +51,12 @@
             %h3 Intermediate
             .price
               .price_figure
-                %span.price_number $49
-                %span.price_tenure
+                %span.price_number $19
+                %span.price_tenure per month, per user
             %ul.features
-              %li 100 skill assessments
-              %li Default Challenges
+              %li Contact 20 Users
               %li Full admin panel
-              %li Standard URL
+              %li Filter by 2 Challenges
               %li 24/7 Email support
             .price_footer
               %a.action_button{:href => "#"} Select
@@ -60,13 +64,12 @@
             %h3 Professional
             .price
               .price_figure
-                %span.price_number $199
-                %span.price_tenure
+                %span.price_number $39
+                %span.price_tenure per month, per user
             %ul.features
-              %li 500 skill assessments
-              %li Customizable Challenges
+              %li Contact 50 Users
               %li Full admin panel
-              %li Customized URL
+              %li Filter by 3+ Challenges
               %li 24/7 Email support
             .price_footer
               %a.action_button{:href => "#"} Select
@@ -74,13 +77,12 @@
             %h3 Enterprise
             .price
               .price_figure
-                %span.price_number $299
-                %span.price_tenure
+                %span.price_number $69
+                %span.price_tenure per month, per user
             %ul.features
-              %li 1,000 skill assessments
-              %li Customizable Challenges
+              %li Contact 100 Users
               %li Full admin panel
-              %li Customized URL
+              %li Filter by 3+ Challenges
               %li 24/7 Email support
             .price_footer
               %a.action_button{:href => "#"} Select
