--- a/app/views/pages/talentminer.html.haml
+++ b/app/views/pages/talentminer.html.haml
@@ -46,7 +46,7 @@
               %li Filter by 1 Challenge
               %li 24/7 Email support
             .price_footer
-              %a.action_button{:href => "#"} Select
+              %a.action_button{:href => "/product_form"} Select
           %li.price_block
             %h3 Intermediate
             .price
@@ -59,7 +59,7 @@
               %li Filter by 2 Challenges
               %li 24/7 Email support
             .price_footer
-              %a.action_button{:href => "#"} Select
+              %a.action_button{:href => "/product_form"} Select
           %li.price_block
             %h3 Professional
             .price
@@ -72,7 +72,7 @@
               %li Filter by 3+ Challenges
               %li 24/7 Email support
             .price_footer
-              %a.action_button{:href => "#"} Select
+              %a.action_button{:href => "/product_form"} Select
           %li.price_block
             %h3 Enterprise
             .price
@@ -85,4 +85,4 @@
               %li Filter by 3+ Challenges
               %li 24/7 Email support
             .price_footer
-              %a.action_button{:href => "#"} Select
+              %a.action_button{:href => "/product_form"} Select
